--- a/manifest.json
+++ b/manifest.json
@@ -4,23 +4,23 @@
     "version": "1.0.6",
     "manifest_version": 2,
     "background": {
-        "scripts": ["lib/background.js"]
+        "scripts": ["src/background.js"]
     },
     "browser_action": {
-        "default_popup": "popup/popup.html"
+        "default_popup": "src/popup/popup.html"
     },
-    "web_accessible_resources": ["popup/popup.html"],
+    "web_accessible_resources": ["popup/popup.html", "src/injectButton.js"],
     "icons": {
-        "16": "icons/tie_16.png",
-        "48": "icons/tie_48.png",
-        "128": "icons/tie_128.png"
+        "16": "src/icons/tie_16.png",
+        "48": "src/icons/tie_48.png",
+        "128": "src/icons/tie_128.png"
     },
     "permissions": ["tabs", "activeTab", "webNavigation", "storage"],
     "content_scripts": [
         {
             "matches": ["*://github.com/*"],
             "css": [],
-            "js": ["lib/content.js"]
+            "js": ["src/index.js"]
         }
     ]
 }
